--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,8 @@
 .container {
   padding: 2.5rem 2rem;
   color: #fff;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
+  background: rgba(255, 255, 255, 0.041);
+  border-radius: 6px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -13,7 +13,7 @@
 
 h1 {
   text-align: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .form {
@@ -24,9 +24,9 @@ h1 {
 
 .input {
   flex: 1;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   font-size: 1rem;
-  border-radius: 5px;
+  border-radius: 4px;
   border: none;
   outline: none;
 }
@@ -34,9 +34,10 @@ h1 {
 .button {
   padding: 0.5rem 1rem;
   font-size: 1rem;
-  background: #007bff;
+  background: #000000;
   color: white;
-  border: none;
+  border: 1px solid #000;
+  outline: 1px solid #000;
   cursor: pointer;
   width: 150px;
   border-radius: 5px;
